{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 216,
  "lineage": "7856b5dd-dc4d-00a8-6042-e80c10db75a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "ucop-secops-logging",
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:loadbalancer/app/test-lb-tf/19a16f8a841d2042",
            "arn_suffix": "app/test-lb-tf/19a16f8a841d2042",
            "dns_name": "test-lb-tf-493195189.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:944706592399:loadbalancer/app/test-lb-tf/19a16f8a841d2042",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0f53c3fac35981bdf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-084c56f1fd8699660"
              },
              {
                "subnet_id": "subnet-0ece5975ca259796e"
              }
            ],
            "subnets": [
              "subnet-084c56f1fd8699660",
              "subnet-0ece5975ca259796e"
            ],
            "vpc_id": "vpc-06a0bfef01b9d0e7b",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "ecs_alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:targetgroup/blue-green/29cc0e8010a92308",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:listener-rule/app/test-lb-tf/19a16f8a841d2042/26b5b6413e55e2de/e79d9fe02c4b29c9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "test/plain"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:944706592399:listener-rule/app/test-lb-tf/19a16f8a841d2042/26b5b6413e55e2de/e79d9fe02c4b29c9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:listener/app/test-lb-tf/19a16f8a841d2042/26b5b6413e55e2de",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.ecs_app_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs_app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:targetgroup/blue-green/29cc0e8010a92308",
            "arn_suffix": "targetgroup/blue-green/29cc0e8010a92308",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:944706592399:targetgroup/blue-green/29cc0e8010a92308",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bluegrean-TG"
            },
            "tags_all": {
              "Name": "bluegrean-TG"
            },
            "target_type": "ip",
            "vpc_id": "vpc-06a0bfef01b9d0e7b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:listener/app/test-lb-tf/19a16f8a841d2042/26b5b6413e55e2de",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:targetgroup/target-group/b5631fb4ceb40f30",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:944706592399:listener/app/test-lb-tf/19a16f8a841d2042/26b5b6413e55e2de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:loadbalancer/app/test-lb-tf/19a16f8a841d2042",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:944706592399:targetgroup/target-group/b5631fb4ceb40f30",
            "arn_suffix": "targetgroup/target-group/b5631fb4ceb40f30",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:944706592399:targetgroup/target-group/b5631fb4ceb40f30",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06a0bfef01b9d0e7b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:944706592399:security-group/sg-0f53c3fac35981bdf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f53c3fac35981bdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kk-ecs-test-lb-sg",
            "name_prefix": "",
            "owner_id": "944706592399",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a0bfef01b9d0e7b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:944706592399:security-group/sg-0bce3c3766fe623cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bce3c3766fe623cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f53c3fac35981bdf"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kk-ecs-test",
            "name_prefix": "",
            "owner_id": "944706592399",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a0bfef01b9d0e7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}